# coqui-imp

./: CoquiImp.py  README.md  pyproject.toml
src/coqui_imp/: __init__.py  coqui_imp.py
tests/: speaker-test.py
