[tool.poetry]
name = "coqui-imp"
version = "0.1.0"
description = ""
authors = ["Cammy <cameronsteele@steelecameron.com>"]
readme = "README.md"
packages = [{include = "coqui_imp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tts = "^0.13.3"
playsound = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
