[project]
name = "coqui-imp"
version = "0.1.0"
description = ""
authors = [
	{ name = "Cammy", email = "cameronsteele@steelecameron.com" }
]
readme = "README.md"
requires-python = ">=3.9.0,<3.11"
dependencies = [
	"tts >=0.13.3",
	"simpleaudio >=1.0.4",
	#"playsound >=1.3.0",
]

[build-system]
requires = ["setuptools >= 67.7.2", "wheel >= 0.40.0"]
build-backend = "setuptools.build_meta"
